image overflow fix

--- a/css/style.css
+++ b/css/style.css
@@ -1137,14 +1137,9 @@ a:focus {
    #main-title{
     font-size: 21px;
    }
-
+ 
   }
 
-  .aluminum {
-    height: 100px;
-
-    
-  }
 
 /*******************************/
 /******* Testimonial CSS *******/
